@@ -5,7 +5,8 @@ Changelog
 1.14.8 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Migrate workflowstates with wfhistory migration & don't set state manually unless necessary.
+  [tschanzt]
 
 
 1.14.7 (2015-08-27)
